samples/_failures_safe/1761714021_909b9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b28480d.c: In function ‘main’:
./samples/SAFE/__tmp_1b28480d.c:152:40: error: expected ‘)’ at end of input
  152 |     print_word_counts(words, word_count
      |                      ~                 ^
      |                                        )
./samples/SAFE/__tmp_1b28480d.c:152:5: error: expected declaration or statement at end of input
  152 |     print_word_counts(words, word_count
      |     ^~~~~~~~~~~~~~~~~
